Updating comments index.html

--- a/Front-end/Login/index.html
+++ b/Front-end/Login/index.html
@@ -12,7 +12,7 @@
         <!--Login Container-->
         <div class="bg-gray-100 rounded-2xl drop-shadow-lg max-w-3xl p-5 flex">
 
-            <!--form-->
+            <!--Login form -->
             <div class="w-1/2 px-16 ">
                 <h2  class="text-2xl font-bold ">Login</h2>
                 <p class="text-sm mt-4">If you already have an acoount, easily log in</p>
@@ -44,7 +44,7 @@
                         </p>
                         </div>
                 </div>
-            <!--image-->
+            <!--Image on the left-->
             <div class=" w-1/2 p-0 ">
                 <img class="rounded-2xl" src="image_login.jpg" alt="IMAGE">
             </div>
