--- a/Front-end/Login/index.html
+++ b/Front-end/Login/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    
+    <script src="script.js"></script>
     <title>Login Screen</title>
 </head>
 <body class="bg-black">
-    <section class="bg-gray-100 min-h-screen items-center justify-center flex">
+    <section class="bg-gray-300 min-h-screen items-center justify-center flex">
         <!--Login Container-->
-        <div class="bg-gray-100 rounded-2xl drop-shadow-lg max-w-3xl p-5 flex">
+        <div class=" bg-gray-100 rounded-2xl drop-shadow-lg max-w-3xl p-5 flex">
 
-            <!--Login form -->
+            <!--form-->
             <div class="w-1/2 px-16 ">
-                <h2  class="text-2xl font-bold ">Login</h2>
-                <p class="text-sm mt-4">If you already have an acoount, easily log in</p>
+                <h2  class="mt-5 text-2xl font-bold ">Login</h2>
+                <p class="text-sm mt-4">If you already have an account, easily log in</p>
                 <form action="" class="flex flex-col gap-4">
                     <input class="p-2 mt-8 rounded-xl border" type="text"
                     name="email"
                     placeholder="Email">
                     <div class="relative">
-                    <input class="p-2 rounded-xl border w-full" type="password"
+                    <input id="passwordInput" class="p-2 rounded-xl border w-full" type="password"
                     name="password"
                     placeholder="Password">
-                    <img class=" absolute top-1/3 right-3" width="16" height="16" src="https://img.icons8.com/fluency-systems-regular/48/visible--v1.png" alt="visible--v1"/>
+                    <img onclick="togglePasswordVisibility()" class=" absolute top-1/3 right-3" width="16" height="16" src="https://img.icons8.com/fluency-systems-regular/48/visible--v1.png" alt="visible--v1"/>
                     </div>
                     <button class="bg-black text-white rounded-xl py-2 hover:scale-105 duration-300">Log In</button>
                     
@@ -40,16 +40,15 @@
                         </svg>
                         Login with Google</button>
                         <div class="border-b py-4 flex justify-center text-sm text-blue-600 hover:scale-105 ">Forgot your Password?</div>
-                        <div class="text-sm flex justify-center mt-4 items-center"><p>Don't have an account? <a class="text-blue-600 text-sm  " href="">Sign Up</a>
+                        <div class="text-sm flex justify-center mt-4 items-center"><p>Don't have an account? <a class="text-blue-600 text-sm  " href="Sign-Up.html">Sign Up</a>
                         </p>
                         </div>
                 </div>
-            <!--Image on the left-->
+            <!--image-->
             <div class=" w-1/2 p-0 ">
                 <img class="rounded-2xl" src="image_login.jpg" alt="IMAGE">
             </div>
         </div>
-    </section>        
-
+    </section>   
 </body>
 </html>
